[package]
name = "rsmodule"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsmodule"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
hex = "0.4"
lazy_static = "1.5.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.9.0"
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
